<resources>
    <string name="app_name">RealWear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Context Menu -->
    <string name="context_menuTitle">Select Action</string>
    <string name="context_edit">Edit</string>
    <string name="context_remove">Remove</string>
    <string name="context_return">Return Task</string>
    <string name="context_take">Take Task</string>

    <!-- Headers -->
    <string name="header_componentText">TextView</string>
    <string name="header_stepHeader">Step</string>
    <string name="header_taskdetails">Task Details</string>
    <string name="header_mytask">My Tasks</string>
    <string name="header_taskAndManager">Task/Manager</string>
    <string name="header_description">Description</string>
    <string name="header_locationState">Location/state</string>
    <string name="header_stepDetails">Step Details</string>

    <!-- Labels -->
    <string name="label_stepdetails_stepcontent">Step content</string>
    <string name="c_image_image">Image</string>
    <string name="c_text_textview">TextView</string>
    <string name="c_testexpandable_textview">TextView</string>
    <string name="c_text_textview2">TextView</string>
    <string name="c_textsubtext_textview">TextView</string>
    <string name="c_textsubtext_content">TextView</string>

    <!-- Buttons -->
    <string name="button_nextstep">Next step</string>
    <string name="button_start">Start</string>
    <string name="button_complete">Complete</string>
    <string name="button_camera">camera</string>
    <string name="button_myTask">myTask</string>
    <string name="button_retake">retake</string>
    <string name="button_submit">submit</string>
    <string name="button_home">HOME</string>

    <!-- Hints -->

    <!-- Enum Values -->
    <string name="enum_assignmentStatus_unassigned">UNASSIGNED</string>
    <string name="enum_assignmentStatus_assigned">ASSIGNED</string>
    <string name="enum_assignmentStatus_open">OPEN</string>
    <string name="enum_assignmentStatus_closed">CLOSED</string>

    <string name="enum_progressStatus_notStarted">NOT STARTED</string>
    <string name="enum_progressStatus_started">STARTED</string>
    <string name="enum_progressStatus_pendingReview">PENDING REVIEW</string>
    <string name="enum_progressStatus_rejected">REJECTED</string>
    <string name="enum_progressStatus_approved">APPROVED</string>

    <string name="enum_reportStatus_submitted">SUBMITTED</string>
    <string name="enum_reportStatus_confirmed">CONFIRMED</string>





</resources>